agrego modelo pickle

--- a/checkpoint3/7506R_TP1_GRUPO19_CH3_ENTREGA_RF.ipynb
+++ b/checkpoint3/7506R_TP1_GRUPO19_CH3_ENTREGA_RF.ipynb
@@ -782,11 +782,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Guardando el modelo con pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "guardamos el random forest con pickle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('../modelos/rf.pickle', 'wb') as file:\n",
+    "    pickle.dump(model, file)"
+   ]
   }
  ],
  "metadata": {
