cambiando al mejor model

--- a/checkpoint3/7506R_TP1_GRUPO19_CH3_ENTREGA_RF.ipynb
+++ b/checkpoint3/7506R_TP1_GRUPO19_CH3_ENTREGA_RF.ipynb
@@ -762,14 +762,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_test = pd.read_csv(\"../dataset/hotels_test_procesado.csv\")\n",
     "assert(len(df_test)==26535)\n",
     "\n",
-    "prediccion = model.predict(df_test[attrs].values)\n",
+    "prediccion = model_rfc_multimetrica.predict(df_test[attrs].values)\n",
     "assert(len(prediccion)==26535)\n",
     "\n",
     "submit = pd.DataFrame(\n",
@@ -804,7 +804,7 @@
     "import pickle\n",
     "\n",
     "with open('../modelos/rf.pickle', 'wb') as file:\n",
-    "    pickle.dump(model, file)"
+    "    pickle.dump(model_rfc_multimetrica, file)"
    ]
   }
  ],
