manejo de overfiting

--- a/checkpoint4/7506R_TP1_GRUPO19_CH4_ENTREGA.ipynb
+++ b/checkpoint4/7506R_TP1_GRUPO19_CH4_ENTREGA.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "id": "bf5f6562",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "id": "a46f2709",
    "metadata": {},
    "outputs": [
@@ -235,19 +235,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_7\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense (Dense)               (None, 400)               14800     \n",
+      " dense_29 (Dense)            (None, 400)               14800     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 250)               100250    \n",
+      " dense_30 (Dense)            (None, 250)               100250    \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 250)               62750     \n",
+      " dense_31 (Dense)            (None, 250)               62750     \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 50)                12550     \n",
+      " dense_32 (Dense)            (None, 50)                12550     \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 1)                 51        \n",
+      " dense_33 (Dense)            (None, 1)                 51        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 190,401\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "id": "18106f5a",
    "metadata": {
     "scrolled": true
@@ -277,39 +277,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "688/688 [==============================] - 7s 8ms/step - loss: 0.3734 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3486 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 2/10\n",
-      "688/688 [==============================] - 5s 8ms/step - loss: 0.3357 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3358 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 3/10\n",
-      "688/688 [==============================] - 5s 8ms/step - loss: 0.3260 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3311 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 4/10\n",
-      "688/688 [==============================] - 5s 8ms/step - loss: 0.3194 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3260 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 5/10\n",
-      "688/688 [==============================] - 6s 8ms/step - loss: 0.3149 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3233 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 6/10\n",
-      "688/688 [==============================] - 6s 8ms/step - loss: 0.3113 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3179 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 7/10\n",
-      "688/688 [==============================] - 7s 9ms/step - loss: 0.3089 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3176 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 8/10\n",
-      "688/688 [==============================] - 7s 9ms/step - loss: 0.3069 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3161 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 9/10\n",
-      "688/688 [==============================] - 7s 10ms/step - loss: 0.3040 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3160 - val_sparse_categorical_accuracy: 0.5000\n",
-      "Epoch 10/10\n",
-      "688/688 [==============================] - 6s 8ms/step - loss: 0.3020 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.3139 - val_sparse_categorical_accuracy: 0.5000\n"
+      "Epoch 1/25\n",
+      "688/688 [==============================] - 7s 10ms/step - loss: 0.2724 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2998 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 2/25\n",
+      "688/688 [==============================] - 7s 10ms/step - loss: 0.2713 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2994 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 3/25\n",
+      "688/688 [==============================] - 9s 13ms/step - loss: 0.2704 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2993 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 4/25\n",
+      "688/688 [==============================] - 10s 14ms/step - loss: 0.2695 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2991 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 5/25\n",
+      "688/688 [==============================] - 13s 18ms/step - loss: 0.2682 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2978 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 6/25\n",
+      "688/688 [==============================] - 10s 14ms/step - loss: 0.2673 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2983 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 7/25\n",
+      "688/688 [==============================] - 8s 12ms/step - loss: 0.2665 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2990 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 8/25\n",
+      "688/688 [==============================] - 6s 9ms/step - loss: 0.2658 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2964 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 9/25\n",
+      "688/688 [==============================] - 6s 9ms/step - loss: 0.2650 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2964 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 10/25\n",
+      "688/688 [==============================] - 7s 11ms/step - loss: 0.2638 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2997 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 11/25\n",
+      "688/688 [==============================] - 7s 11ms/step - loss: 0.2634 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2943 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 12/25\n",
+      "688/688 [==============================] - 7s 10ms/step - loss: 0.2623 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2975 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 13/25\n",
+      "688/688 [==============================] - 7s 10ms/step - loss: 0.2619 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2976 - val_sparse_categorical_accuracy: 0.5000\n",
+      "Epoch 14/25\n",
+      "688/688 [==============================] - 7s 10ms/step - loss: 0.2606 - sparse_categorical_accuracy: 0.5005 - val_loss: 0.2953 - val_sparse_categorical_accuracy: 0.5000\n"
      ]
     }
    ],
    "source": [
     "history = model.fit(X_train, y_train,\n",
-    "                    epochs=10,\n",
+    "                    epochs=25,\n",
     "                    batch_size=45,\n",
-    "                    validation_data=(X_val, y_val))"
+    "                    validation_data=(X_val, y_val),\n",
+    "                    callbacks = [keras.callbacks.EarlyStopping(patience=3, restore_best_weights=True)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "id": "14537028",
    "metadata": {},
    "outputs": [
@@ -317,8 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "968/968 [==============================] - 4s 4ms/step - loss: 0.3139 - sparse_categorical_accuracy: 0.5000\n",
-      "Loss =  0.31385719776153564\n",
+      "968/968 [==============================] - 3s 3ms/step - loss: 0.2943 - sparse_categorical_accuracy: 0.5000\n",
+      "Loss =  0.2943118214607239\n",
       "Accuracy =  0.49998384714126587\n"
      ]
     }
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "id": "56c2b573",
    "metadata": {},
    "outputs": [
@@ -341,7 +350,7 @@
      "output_type": "stream",
      "text": [
       "968/968 [==============================] - 3s 3ms/step\n",
-      "f1 score sobre validacion: 0.8526961169627416\n"
+      "f1 score sobre validacion: 0.8635070787127288\n"
      ]
     }
    ],
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "id": "400bf603",
    "metadata": {},
    "outputs": [
@@ -361,8 +370,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "968/968 [==============================] - 3s 3ms/step\n",
-      "f1 score sobre train: 0.8630193076947306\n"
+      "968/968 [==============================] - 2s 3ms/step\n",
+      "f1 score sobre train: 0.8831841432225064\n"
      ]
     }
    ],
