--- a/checkpoint4/7506R_TP1_GRUPO19_CH4_ENTREGA.ipynb
+++ b/checkpoint4/7506R_TP1_GRUPO19_CH4_ENTREGA.ipynb
@@ -504,6 +504,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6124a53f",
+   "metadata": {},
+   "source": [
+    "para la busqueda de hiperparemetros creamos un modelo mas simple que el anterior para que no tarde tanto tiempo en ejecutarse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "15ea760f",
@@ -659,6 +667,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5cc79e4",
+   "metadata": {},
+   "source": [
+    "Ploteamos la confusion matrix del set de entrenamiento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "00b2221e",
@@ -703,6 +719,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02f158e2",
+   "metadata": {},
+   "source": [
+    "como podemos ver aqui, la busqueda de hiperparametros no fue muy efectiva ya que debimos sacrificar una buena parte en la creacion del modelo, y los parametros que encontramos no sirven tanto como para que este nuevo modelo mas simple sea mejor que el previo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ec471e7",
+   "metadata": {},
+   "source": [
+    "para encontrar un modelo mejor que el nuestro buscando hiperparametros con grid/random search, el tiempo de ejecucion debe ser muy alto por lo que no consideramos que valga la pena, ya que tampoco es mucho mejor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9c82078-e3dd-4a5e-8c16-4bb015e9f53e",
    "metadata": {
     "tags": []
@@ -741,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "id": "7ac02975",
    "metadata": {},
    "outputs": [
