adding second notebook

--- a/checkpoint4/7506R_TP1_GRUPO19_CH4_ENTREGA.ipynb
+++ b/checkpoint4/7506R_TP1_GRUPO19_CH4_ENTREGA.ipynb
@@ -662,8 +662,8 @@
     }
    ],
    "source": [
-    "y_predic_iris_cv =grid.predict(X_val)\n",
-    "y_predic_iris_cv\n"
+    "y_p =grid.predict(X_val)\n",
+    "y_p"
    ]
   },
   {
@@ -814,7 +814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
