--- a/TP2/7506_TP2_GRUPO19_CHP1_ENTREGA.ipynb
+++ b/TP2/7506_TP2_GRUPO19_CHP1_ENTREGA.ipynb
@@ -1159,7 +1159,7 @@
     }
    ],
    "source": [
-    "df_test = pd.read_csv(\"/dataset/test.csv\")\n",
+    "df_test = pd.read_csv(\"dataset/test.csv\")\n",
     "assert(len(df_test)==8599)\n",
     "\n",
     "X = df_test['review_es']\n",
@@ -1177,7 +1177,7 @@
     ")\n",
     "assert(len(submit)==8599)\n",
     "\n",
-    "submit.to_csv(\"/dataset/submit.csv\")"
+    "submit.to_csv(\"dataset/submit.csv\")"
    ]
   },
   {
