Eliminado de reviews en ingles

--- a/TP2/7506_TP2_GRUPO19_CHP1_ENTREGA.ipynb
+++ b/TP2/7506_TP2_GRUPO19_CHP1_ENTREGA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "52dfbb58-ce25-4d25-863b-1ea0a68a120e",
    "metadata": {
     "tags": []
@@ -37,6 +37,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
+    "from langdetect import detect\n",
     "\n",
     "from sklearn.metrics import make_scorer, f1_score, confusion_matrix, precision_score, recall_score, accuracy_score"
    ]
@@ -46,7 +47,7 @@
    "id": "357f5fb6-ff12-4a05-9c70-17beaf01c584",
    "metadata": {},
    "source": [
-    "Cargamos nuestro set de entrenamiento"
+    "Cargamos nuestro set de entrenamiento. Haremos una copia porque algunos métodos no van a requerir preprocesamiento."
    ]
   },
   {
@@ -134,6 +135,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"dataset/train.csv\")\n",
+    "df_original = df.copy()\n",
     "df.head()"
    ]
   },
@@ -178,6 +180,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a15a0793-5ee3-43fa-a7cc-fcdd5206bbd1",
+   "metadata": {},
+   "source": [
+    "Nos aseguramos de que todas las reviews estén en español, por lo que usaremos la funcion 'detect' de la libreria langdetect y eliminamos todas las que tengan un lenguaje distinto al español."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ac03f038-9f1c-4399-a392-ca7fbb1452d8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = df[df['review_es'].apply(detect) == 'es']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a63e76d6-0d4e-457f-9b2c-501cdeae688d",
    "metadata": {},
    "source": [
@@ -186,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "74b99b9f-5bc3-4380-8d84-7fc68748cfdc",
    "metadata": {
     "tags": []
@@ -206,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "a68176ab-6dd2-4389-8b18-43cc7de03330",
    "metadata": {
     "tags": []
@@ -226,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "ea0e1c4a-4303-4c93-a890-2f4baaf97d27",
    "metadata": {
     "tags": []
@@ -248,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "7db63314-c3cd-4c4b-917e-5a0fd6373f22",
    "metadata": {
     "tags": []
@@ -269,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "4df010c7-7a7b-4afa-bdb9-5e87b4f87e26",
    "metadata": {
     "tags": []
@@ -291,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "8d8e7442-eb2d-4c84-94b0-cd1bf7841557",
    "metadata": {
     "tags": []
@@ -435,8 +457,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    ID                                          review_es sentimiento   \n",
-       "0    0      criticos  mencionado  despues  ver solo  o...    positivo  \\\n",
+       "    ID                                          review_es sentimiento  \\\n",
+       "0    0      criticos  mencionado  despues  ver solo  o...    positivo   \n",
        "1    1   pequena pequena produccion  tecnica  filmacio...    positivo   \n",
        "2    2  pense     manera maravillosa  pasar tiempo   f...    positivo   \n",
        "3    3  basicamente   familia   nino pequeno jake pien...    negativo   \n",
@@ -470,13 +492,25 @@
        "14                        1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "23d01743-1166-4857-993d-c9a8fb664b5b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"dataset/train-preprocesado.csv\")"
    ]
   },
   {
@@ -2606,7 +2640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
