--- a/TP2/7506_TP2_GRUPO19_CHP1_RED_NEURONAL.ipynb
+++ b/TP2/7506_TP2_GRUPO19_CHP1_RED_NEURONAL.ipynb
@@ -237,8 +237,8 @@
     }
    ],
    "source": [
-    "lstm_nn.compile(optimizer='adam', loss='binary_crossentropy',metrics=['accuracy'])\n",
-    "print(lstm_nn.summary())"
+    "model.compile(optimizer='adam', loss='binary_crossentropy',metrics=['accuracy'])\n",
+    "print(model.summary())"
    ]
   },
   {
@@ -415,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
